--- a/index.html
+++ b/index.html
@@ -4,8 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment-02</title>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
-<body>
+<body class="inter-font">
+    <header>
+        <nav>
+            <div class="logo"><h3>Fitness</h3></div>
+
+        </nav>
+    </header>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
     
 </body>
 </html>
