added chanhe your habits section

--- a/index.html
+++ b/index.html
@@ -38,47 +38,47 @@
     <main>
         <section class="habits">
             <div class="habits-text">
-                <h2 class="habits-heading text-white heading-font-size">Change Your Habits</h2>
+                <h2 class="habits-heading  heading-font-size">Change Your Habits</h2>
             <p class="habits-description text-light-white">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
             </div>
             
-            <div>
-                <div>
-                    <img src="images/image1.png" alt="">
-                    <p>Movement</p>
-                    <p>We believe fitness should be accessible to everyone</p>
+            <div class="habits-cards d-flex">
+                <div class="habits-card">
+                    <img class="" src="images/image1.png" alt="">
+                    <p class="habits-card-title">Movement</p>
+                    <p class="habits-card-description text-light-white">We believe fitness should be accessible to everyone</p>
                 </div>
-                <div>
+                <div class="habits-card">
                     <img src="images/image2.png" alt="">
-                    <p>Time</p>
-                    <p>We believe fitness should be accessible to everyone</p>
+                    <p class="habits-card-title">Time</p>
+                    <p class="habits-card-description text-light-white">We believe fitness should be accessible to everyone</p>
                 </div>
-                <div>
+                <div class="habits-card">
                     <img src="images/image3.png" alt="">
-                    <p>Practice</p>
-                    <p>We believe fitness should be accessible to everyone</p>
+                    <p class="habits-card-title">Practice</p>
+                    <p class="habits-card-description text-light-white">We believe fitness should be accessible to everyone</p>
                 </div>
-                <div>
+                <div class="habits-card">
                     <img src="images/image4.png" alt="">
-                    <p>Weight</p>
-                    <p>We believe fitness should be accessible to everyone</p>
+                    <p class="habits-card-title">Weight</p>
+                    <p class="habits-card-description text-light-white">We believe fitness should be accessible to everyone</p>
                 </div>
             </div>
         </section>
 
-        <section>
-            <div class="">
-                <h2>Run an Extra Mile Easily</h2>
-                <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym. With hundreds of professional workouts.</p>
-                <button>Join Now</button>
+        <section class="run d-flex">
+            <div class="run-content">
+                <h2 class="heading-font-size">Run an Extra Mile Easily</h2>
+                <p class="run-content-description text-light-white">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym. With hundreds of professional workouts.</p>
+                <button class="btn-primary2">Join Now</button>
             </div>
             <div class="">
                 <img src="images/run2.jpg" alt="">
             </div>
         </section>
 
-        <section>
-            <h2>BMI Calculator</h2>
+        <section class="bmi">
+            <h2 class="heading-font-size">BMI Calculator</h2>
             <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
             <div class="">
                 <div class="">
@@ -118,8 +118,8 @@
         </section>
 
 
-        <section>
-            <h2>Meet Our Team</h2>
+        <section class="meet">
+            <h2 class="heading-font-size">Meet Our Team</h2>
             <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
             <div class="">
                 <div class="">
