added run  section

--- a/index.html
+++ b/index.html
@@ -72,21 +72,24 @@
                 <p class="run-content-description text-light-white">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym. With hundreds of professional workouts.</p>
                 <button class="btn-primary2">Join Now</button>
             </div>
-            <div class="">
-                <img src="images/run2.jpg" alt="">
+            <div class="run-img">
+                <img src="images/run.jpg" alt="">
             </div>
         </section>
 
         <section class="bmi">
-            <h2 class="heading-font-size">BMI Calculator</h2>
-            <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
+            <div class="bmi-content">
+                <h2 class="heading-font-size ">BMI Calculator</h2>
+                 <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
+            </div>
+            
             <div class="">
                 <div class="">
                     <h3>BMI Calculator Chart</h3>
                     <table>
                        <tr>
                         <th>BMI</th>
-                        <th>Weight Status</th>
+                        <th>Weight Status</th>      
                        </tr>
                        <tr>
                         <td>Below 18.5</td>
