added some fixing

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 </head>
 <body class="inter-font">
-    <header class="bg-pri">
+    <header class="header bg-pri">
         <nav class="navbar d-flex">
             <div class="logo"><h3>Fitness</h3></div>
             <div class="nav-div">
