added final site

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <div class="banner-img">
                 <img class="img-banner-none" src="images/Images-banner.png" alt="">
                 <div class="video-tutorial d-flex">
-                    <div class="circle"></div>
+                    <div class="circle d-flex"><div class="play-button"><i class="fa-solid fa-play" style="color: white"></i></div></div>
                     <div class="video-tutorial-content">
                         <h3>350+</h3>
                         <p>Video Tutorial</p>
