added final site

--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
 
                 <div class="plan-button-content plan-button d-flex">
                     <button class="btn-plan plan-active">Monthly</button>
-                    <button class="btn-plan">yearly</button>
+                    <button class="btn-plan">Yearly</button>
                 </div>
 
                 <div class="your-plan-cards d-flex">
